--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,22 @@
   box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6, a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  outline: none;
+}
+
+a, a:active, a:focus {
+  color: #333;
+  text-decoration: none;
+  transition-timing-function: ease-in-out;
+  transition-duration: 0.2s;
+}
+
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  height: 100%;
 }
 
 main {
@@ -22,7 +35,9 @@ html, body {
 }
 
 body {
-  background-color: black;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 p {
@@ -35,6 +50,7 @@ a {
   padding: 0;
   margin: 0;
 }
+
 a:hover {
   color: white;
 }
@@ -50,6 +66,7 @@ form {
 input::placeholder {
   font-size: 1.2rem;
 }
+
 input[type=text] {
   font-size: 14px;
 }
@@ -61,7 +78,6 @@ form {
 /* NAVBAR */
 header {
   position: fixed;
-  z-index: 1;
   width: 100%;
 }
 
@@ -70,9 +86,10 @@ header {
   display: flex;
   flex-direction: row;
 }
+
 .brand-link a {
   font-family: "Bebas Neue", sans-serif;
-  font-size: 51px;
+  font-size: 5vh;
 }
 
 .brand-logo {
@@ -81,6 +98,8 @@ header {
 }
 
 nav {
+  z-index: 1;
+  width: 100%;
   background: rgb(102, 4, 4);
   background: linear-gradient(90deg, rgb(102, 4, 4) 8%, rgb(0, 0, 0) 85%, rgb(93, 2, 2) 100%);
 }
@@ -100,17 +119,26 @@ nav {
   column-gap: 12rem;
 }
 .nav-center-btn a {
+  font-size: 3vh;
+}
+
+.nav-center-btn a {
   font-family: "Bebas Neue", sans-serif;
 }
+
 .nav-center-btn li {
   font-size: 30px;
 }
 
 /* MAIN */
+main {
+  min-height: calc(100vh - 800px);
+}
+
 .bg-intro {
-  background: url(../imgs/bg.index.jpg);
+  background-repeat: no-repeat;
+  background: url(../imgs/assets/animate-cover1.jpg);
   min-width: 600px;
-  max-width: 250vw;
   min-height: 100vh;
   width: 100%;
   max-height: 5vh;
@@ -118,27 +146,34 @@ nav {
   justify-content: center;
   align-items: center;
 }
-.bg-intro .text-cover {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
 .bg-intro h1 {
-  font-size: 20rem;
+  color: white;
+  font-size: 12vh;
+  font-family: "Bebas Neue", sans-serif;
 }
 .bg-intro h3 {
   font-size: 7rem;
   text-align: center;
+  font-family: "Bebas Neue", sans-serif;
+  color: lightcyan;
+}
+
+.bg-intro .text-cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .flex-text-intro {
   display: flex;
   flex-direction: column;
 }
+
 .flex-text-intro h1 {
   font-size: 10vw;
   color: white;
 }
+
 .flex-text-intro p {
   font-size: 5vw;
   color: white;
@@ -149,34 +184,79 @@ nav {
   display: flex;
   justify-content: center;
 }
+
 .flex-btn-center a {
   color: #24262b;
   position: sticky;
   z-index: 2;
   font-size: 3rem;
 }
+
 .flex-btn-center button {
   position: sticky;
   z-index: 2;
   border-radius: 15px;
 }
 
-.flex-items {
+.container-intro {
+  max-width: 100%;
   display: flex;
-  padding-top: 5rem;
   justify-content: center;
-  line-height: 2.5;
+  flex-direction: column;
+  align-items: center;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(85, 28, 28) 49%, rgb(0, 0, 0) 100%);
 }
-.flex-items h2 {
-  font-size: 30px;
+
+.intro-group h1 {
+  color: lightcyan;
+  font-family: "Bebas Neue", sans-serif;
 }
-.flex-items h3 {
-  font-size: 20px;
+
+.title-intro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 13rem;
+  margin-bottom: 3.2rem;
+  font-size: 12vh;
 }
-.flex-items img {
-  width: 400px;
-  height: 500px;
-  border-radius: 50%;
+
+.intro-style {
+  display: grid;
+  grid-template-columns: repeat(2, 60rem);
+  column-gap: 25rem;
+  margin-top: 3.2rem;
+  margin-bottom: 3.2rem;
+}
+.intro-style h2 {
+  text-align: center;
+  color: black;
+  font-family: "Bebas Neue", sans-serif;
+}
+.intro-style p {
+  font-size: 15px;
+  margin-top: 1rem;
+  text-align: center;
+  color: black;
+  font-family: "Bebas Neue", sans-serif;
+  border-bottom: 2px solid white;
+}
+
+.box-intro-style h2 {
+  font-size: 7.2vh;
+}
+.box-intro-style p {
+  font-size: 6vh;
+}
+
+.intro-p {
+  flex-direction: column;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+.intro-p p {
+  text-align: center;
 }
 
 /* contacto */
@@ -240,6 +320,7 @@ nav {
 .items-tienda {
   padding: 5rem;
 }
+
 .items-tienda img {
   width: 30rem;
   height: 15rem;
@@ -269,15 +350,18 @@ nav {
   padding: 12px;
   padding-bottom: 20rem;
 }
+
 .newsletter-box label input {
   width: 50rem;
   display: block;
   margin-left: 50rem;
 }
+
 .newsletter-box label {
   font-size: 2rem;
   text-align: center;
 }
+
 .newsletter-box input {
   height: 2.5rem;
 }
@@ -293,6 +377,7 @@ nav {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .empleado-galeria div {
   display: inline;
 }
@@ -300,6 +385,7 @@ nav {
 .empleado-box a {
   margin-left: 15rem;
 }
+
 .empleado-box img {
   border-radius: 15px;
 }
@@ -310,15 +396,131 @@ nav {
 }
 
 /* footer */
-.terms-condition {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
+.btn {
+  padding: 14px 25px;
+  text-transform: uppercase;
+  transition: all 0.8s;
 }
 
-.terms-condition p {
-  margin-top: 3.2px;
-  font-size: 25px;
+.red-btn {
+  background: #ed1b24;
+  border: 2px solid #ed1b24;
+  color: #fff;
+}
+
+.red-btn:hover {
+  background: #1c376c;
+  color: #fff;
+  border-color: #ffffff;
+}
+
+/*---------footer---------*/
+footer {
+  background-color: #222023;
+  background-image: -webkit-linear-gradient(top, #222023, #1e2c47);
+  background-image: -moz-linear-gradient(top, #222023, #1e2c47);
+  background-image: -o-linear-gradient(top, #222023, #1e2c47);
+  background-image: linear-gradient(to bottom, #222023, #1e2c47);
+  padding: 6rem;
+  color: #fff;
+  font-size: 17px;
+}
+
+footer h3 {
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+footer h4 {
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: inline-block;
+  margin-bottom: 2px;
+}
+
+.about-footer li i {
+  position: absolute;
+  left: 0;
+}
+
+.about-footer li {
+  padding-left: 40px;
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.about-footer ul {
+  margin-top: 40px;
+}
+
+footer a {
+  color: #fff;
+}
+
+footer a:hover {
+  color: #ed1b24;
+}
+
+.footer-title {
+  border-bottom: 2px solid #a61f2d;
+  padding-bottom: 25px;
+  margin-bottom: 35px;
+}
+
+.page-more-info li {
+  margin-bottom: 31px;
+}
+
+footer .table td:first-child {
+  font-weight: 600;
+  padding-left: 33px;
+}
+
+footer .table td:last-child {
+  text-align: right;
+}
+
+footer .table td {
+  padding: 0px;
+  border: 0;
+}
+
+footer .table td i {
+  position: absolute;
+  left: 0px;
+  font-size: 21px;
+  top: 6px;
+}
+
+footer .table td {
+  position: relative;
+  padding: 4px 0;
+}
+
+.footer-logo td {
+  padding-right: 4px !important;
+}
+
+.footer-logo td:last-child {
+  padding-right: 0px !important;
+}
+
+footer hr {
+  border-color: #9294a0;
+}
+
+.footer-bottom p {
+  text-align: right;
+}
+
+.footer-bottom {
+  margin-top: 30px;
+}
+
+.open-hours hr {
+  margin: 30px 0;
 }
 
 /* MEDIA QUERIES */
@@ -326,25 +528,20 @@ nav {
   .bg-intro {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: center;
   }
   .bg-intro p {
-    font-size: 25px;
     text-align: center;
   }
   .bg-intro h1 {
-    font-size: 75px;
     text-align: center;
   }
   .flex-text-intro {
     margin-top: 20rem;
   }
   .nav-grid-btn {
-    display: flex;
-    justify-content: start;
-    flex-direction: row;
-    gap: 30px;
+    display: grid;
+    place-items: center;
   }
   .nav-center-btn {
     display: flex;
@@ -354,9 +551,16 @@ nav {
     padding-bottom: 10px;
   }
 }
-@media screen and (max-width: 1510px) {
-  .info-grid {
-    margin-left: -20rem;
+@media screen and (max-width: 1024px) {
+  .title-intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .intro-style {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 @media screen and (max-width: 500px) {
@@ -382,18 +586,14 @@ nav {
     justify-content: center;
   }
 }
+@media screen and (max-width: 500px) {
+  footer {
+    height: 2800px;
+  }
+}
 @media screen and (max-width: 320px) {
-  .nav-grid-btn {
-    display: flex;
-    flex-direction: column;
-    margin-left: 0rem;
-  }
-  .nav-center-btn {
-    display: flex;
-    gap: 20px;
-  }
-  .nav-center-btn a {
-    padding-bottom: 20px;
+  .text-cover {
+    margin-top: 5rem;
   }
 }
 @media screen and (min-width: 50px) and (max-width: 1024px) {
@@ -410,5 +610,6 @@ nav {
     align-items: center;
   }
 }
+
 
 /*# sourceMappingURL=styles.css.map */
