--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,389 +1,591 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-$fontsize-links: 30px;
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+$fontsizedefault: 6vh;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+h1, h2,h3,h4,h5,h6, a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  outline: none;
+}
+a, a:active, a:focus {
+  color: #333;
+  text-decoration: none;
+  transition-timing-function: ease-in-out;
+  transition-duration: .2s;
+}
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  height: 100%;
+}
 
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
+main {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
 }
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
-}
-main{
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-}
+
 html, body {
-    width: 100%;
-    display: table;
+  width: 100%;
+  display: table;
 }
-body{
-    background-color: black;
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
-p{
-    font-size: 2rem;
+
+p {
+  font-size: 2rem;
 }
-a{
-    text-decoration: none;
-    color: lightgrey;
-    padding: 0;
-    margin: 0;
-    &:hover{
-        color: white;
-    }
+
+a {
+  text-decoration: none;
+  color: lightgrey;
+  padding: 0;
+  margin: 0;
 }
-ul{
-	list-style: none;
+
+a:hover {
+  color: white;
 }
-form{
-    font-size: 1.5rem;
+
+ul {
+  list-style: none;
 }
-input{
-    &::placeholder{
-        font-size: 1.2rem;
-    }
-    &[type="text"]{
-        font-size: 14px;
-    }
+
+form {
+  font-size: 1.5rem;
 }
-form{
-    padding-bottom: 5rem;
+
+input::placeholder {
+  font-size: 1.2rem;
 }
+
+input[type=text] {
+  font-size: 14px;
+}
+
+form {
+  padding-bottom: 5rem;
+}
+
 /* NAVBAR */
 header{
-    position: fixed;
-    z-index: 1;
-    width: 100%;
+  position: fixed;
+  width: 100%;
 }
-.brand-link{
-    padding-top: 1rem;
-    display: flex;
-    flex-direction: row;
-    a{
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: $fontsize-links*1.7;
-    }
+.brand-link {
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: row;
 }
-.brand-logo{
-    min-width: 10px;
-    min-height: 10px;
+
+.brand-link a {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: calc($fontsizedefault - 1vh);
 }
-nav{
-    background: rgb(102,4,4);
-    background: linear-gradient(90deg, rgba(102,4,4,1) 8%, rgba(0,0,0,1) 85%, rgba(93,2,2,1) 100%);
+
+.brand-logo {
+  min-width: 10px;
+  min-height: 10px;
 }
-.nav-grid-btn{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 1rem 0;
-    place-items: center;
-    column-gap: 20rem;
+
+nav {
+  z-index: 1;
+  width: 100%;
+  background: rgb(102, 4, 4);
+  background: linear-gradient(90deg, rgb(102, 4, 4) 8%, rgb(0, 0, 0) 85%, rgb(93, 2, 2) 100%);
 }
-.nav-center-btn{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    margin-top: 2rem;
-    column-gap: 12rem;
-    a{
-        font-family: 'Bebas Neue', sans-serif;
-    }
-    li{
-        font-size: $fontsize-links;
-    }
+
+.nav-grid-btn {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 1rem 0;
+  place-items: center;
+  column-gap: 20rem;
 }
-// TODO: make parallax cover, footer always at the bottom
+
+.nav-center-btn {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-top: 2rem;
+  column-gap: 12rem;
+  a{
+    font-size: calc($fontsizedefault - 3vh);
+  }
+}
+
+.nav-center-btn a {
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.nav-center-btn li {
+  font-size: 30px;
+}
+
 /* MAIN */
-.bg-intro{
-    background: url(../imgs/bg.index.jpg);
-    min-width: 600px;
-    max-width: 250vw;
-    min-height: 100vh;
-    width: 100%;
-    max-height: 5vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .text-cover{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    h1{
-        font-size: 20rem;
-    }
-    h3{
-        font-size: 7rem;
-        text-align: center;
-    }
+main{
+  min-height: calc(100vh - 800px);
 }
-.flex-text-intro{
-    display: flex;
-    flex-direction: column;
-    h1{
-        font-size: 10vw;
-        color: white;
-    }
-    p{
-        font-size: 5vw;
-        color: white;
-        text-align: center;
-    }
+.bg-intro {
+  background-repeat: no-repeat;
+  background: url(../imgs/assets/animate-cover1.jpg);
+  display: flex;
+  justify-content: center;
+  h1 {
+    color: white;
+    font-size: $fontsizedefault*2;
+    font-family: "Bebas Neue", sans-serif;
+  }
+  h3 {
+    font-size: 7rem;
+    text-align: center;
+    font-family: "Bebas Neue", sans-serif;
+    color: lightcyan;
+  }
+  align-items: center;
 }
-.flex-btn-center{
-    display: flex;
-    justify-content: center;
-    a{
-        color: #24262b;
-        position: sticky;
-        z-index: 2;
-        font-size: 3rem;
-    }
-    button{
-        position: sticky;
-        z-index: 2;
-        border-radius: 15px;
-    }
+.bg-intro .text-cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.flex-items{
-    display: flex;
-    padding-top: 5rem;
-    justify-content: center;
-    line-height: 2.5;
-    h2{
-        font-size: $fontsize-links;
-    }
-    h3{
-        font-size: $fontsize-links/1.5;
-    }
-    img{
-        width: 400px;
-        height: 500px;
-        border-radius: 50%;
-    }
+.flex-text-intro {
+  display: flex;
+  flex-direction: column;
 }
-.intro-group{
+
+.flex-text-intro h1 {
+  font-size: 10vw;
+  color: white;
+}
+
+.flex-text-intro p {
+  font-size: 5vw;
+  color: white;
+  text-align: center;
+}
+
+.flex-btn-center {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-btn-center a {
+  color: #24262b;
+  position: sticky;
+  z-index: 2;
+  font-size: 3rem;
+}
+
+.flex-btn-center button {
+  position: sticky;
+  z-index: 2;
+  border-radius: 15px;
+}
+
+.container-intro {
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background: rgb(0,0,0);
+background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(85,28,28,1) 49%, rgba(0,0,0,1) 100%);
+}
+
+.intro-group h1 {
+  color: lightcyan;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.title-intro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 13rem;
+  margin-bottom: 3.2rem;
+  font-size: $fontsizedefault*2;
+}
+
+.intro-style {
+  display: grid;
+  grid-template-columns: repeat(2, 60rem);
+  column-gap: 25rem;
+  margin-top: 3.2rem;
+  margin-bottom: 3.2rem;
+  h2 {
+    text-align: center;
+    color: black;
+    font-family: "Bebas Neue", sans-serif;
+  }
+  p {
+    font-size: 15px;
+    margin-top: 1rem;
+    text-align: center;
+    color: black;
+    font-family: "Bebas Neue", sans-serif;
+    border-bottom: 2px solid white;
+  }
+}
+.box-intro-style {
+  h2{
+    font-size: $fontsizedefault*1.2;
+  }
+  p{
+    font-size: $fontsizedefault;
+  }
+}
+
+.intro-p {
+  flex-direction: column;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  p {
+    text-align: center;
+  }
 }
 /* contacto */
-.contact-map-settings{
-    min-width: 150vw;
-    margin-bottom: -1rem;
+.contact-map-settings {
+  min-width: 150vw;
+  margin-bottom: -1rem;
 }
-.info-grid{
-    display: grid;
-    grid-template-columns: repeat(2, 450px);
-    place-content: center;
-    padding-top: 2rem;
-    background-color: white;
-    width: 1900px;
-    h3{
-        font-size: 3rem;
-    }
-    p{
-        font-size: 1.5rem;
-    }
+
+.info-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 450px);
+  place-content: center;
+  padding-top: 2rem;
+  background-color: white;
+  width: 1900px;
+  h3 {
+    font-size: 3rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
 }
-.contact-info{
-    display: flex;
-    flex-direction: column;
+.contact-info {
+  display: flex;
+  flex-direction: column;
 }
-.flex-icons{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    i{
-        font-size: 5rem;
-    }
+
+.flex-icons {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  i {
+    font-size: 5rem;
+  }
 }
-.user-form{
-    display: flex;
-    flex-direction: column;
+.user-form {
+  display: flex;
+  flex-direction: column;
 }
-.msg-settings{
-    input{
-        height: 100px;
-    }
+
+.msg-settings input {
+  height: 100px;
 }
+
 /* PRODUCTOS */
-.tienda-productos-box{
-    background: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    padding-bottom: 15rem;
-    background-repeat: no-repeat;
-    background-size: cover;
+.tienda-productos-box {
+  background: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  padding-bottom: 15rem;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.portada-tienda{
-    img{
-        width: 170rem;
-        height: 50rem;
-        padding: 5rem;
-    }
+
+.portada-tienda img {
+  width: 170rem;
+  height: 50rem;
+  padding: 5rem;
 }
-.items-tienda{
-    padding: 5rem;
-    img{
-    width: 30rem;
-    height: 15rem;
-    margin-left: 8rem;
-    }
+
+.items-tienda {
+  padding: 5rem;
 }
-.tienda-productos-box{
-    background: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    padding-bottom: 15rem;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.items-tienda img {
+  width: 30rem;
+  height: 15rem;
+  margin-left: 8rem;
 }
-.newsletter-wrapper{
-    background: url(../imgs/newsletter-cover.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding-top: 13rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
-    padding-bottom: 15rem;
+
+.tienda-productos-box {
+  background: url(https://images.unsplash.com/photo-1555505019-8c3f1c4aba5f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  padding-bottom: 15rem;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.newsletter-box{
-    border: 1px solid black;
-    border-radius: 15px;
-    padding: 12px;
-    padding-bottom: 20rem;
-    label input{
-        width: 50rem;
-        display: block;
-        margin-left: 50rem;
-    }
-    label{
-        font-size: 2rem;
-        text-align: center;
-    }
-    input{
-        height: 2.5rem;
-    }
+
+.newsletter-wrapper {
+  background: url(../imgs/newsletter-cover.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 13rem;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  padding-bottom: 15rem;
 }
-.newsletter-form{
-    padding-top: 10rem;
+
+.newsletter-box {
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 12px;
+  padding-bottom: 20rem;
 }
-.empleado-galeria{
-    padding-top: 15rem;
-    padding-bottom: 15rem;
-    background: url(https://i.pinimg.com/originals/e4/1e/b7/e41eb750682725518534bee5d75574af.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    div{
-        display: inline;
-    }
+
+.newsletter-box label input {
+  width: 50rem;
+  display: block;
+  margin-left: 50rem;
 }
-.empleado-box{
-    a{
-        margin-left: 15rem;
-    }
-    img{
-        border-radius: 15px;
-    }
+
+.newsletter-box label {
+  font-size: 2rem;
+  text-align: center;
 }
-.custom-bg-contacts{
-    background: url(../imgs/bg-for-map.jpg);
-    background-size: cover;
+
+.newsletter-box input {
+  height: 2.5rem;
 }
+
+.newsletter-form {
+  padding-top: 10rem;
+}
+
+.empleado-galeria {
+  padding-top: 15rem;
+  padding-bottom: 15rem;
+  background: url(https://i.pinimg.com/originals/e4/1e/b7/e41eb750682725518534bee5d75574af.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.empleado-galeria div {
+  display: inline;
+}
+
+.empleado-box a {
+  margin-left: 15rem;
+}
+
+.empleado-box img {
+  border-radius: 15px;
+}
+
+.custom-bg-contacts {
+  background: url(../imgs/bg-for-map.jpg);
+  background-size: cover;
+}
+
 /* footer */
-.terms-condition{
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
+.btn {
+    padding: 14px 25px;
+    text-transform: uppercase;
+    transition: all 0.8s;
 }
-.terms-condition{
-    p{
-        margin-top: 3.2px;
-        font-size: 25px;
-    }
+.red-btn {
+    background: #ed1b24;
+    border: 2px solid #ed1b24;
+    color: #fff;
+}
+
+.red-btn:hover{
+    background: #1c376c;
+    color: #fff;
+    border-color: #ffffff;
+}
+
+/*---------footer---------*/
+footer {
+    background-color: #222023;
+    background-image: -webkit-linear-gradient( top, #222023, #1e2c47 );
+    background-image: -moz-linear-gradient( top, #222023, #1e2c47 );
+    background-image: -o-linear-gradient( top, #222023, #1e2c47 );
+    background-image: linear-gradient( to bottom, #222023, #1e2c47 );
+    padding: 6rem;
+    color: #fff;
+    font-size: 17px;
+}
+footer{
+  h3 {
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+}
+footer h4 {
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    display: inline-block;
+    margin-bottom: 2px;
+}
+.about-footer li i {
+    position: absolute;
+    left: 0;
+}
+.about-footer li {
+    padding-left: 40px;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.about-footer ul {
+    margin-top: 40px;
+}
+
+footer a {
+    color: #fff;
+}
+
+footer a:hover {
+    color: #ed1b24;
+}
+.footer-title {
+    border-bottom: 2px solid #a61f2d;
+    padding-bottom: 25px;
+    margin-bottom: 35px;
+}
+.page-more-info li {
+    margin-bottom: 31px;
+}
+
+footer .table td:first-child {
+    font-weight: 600;
+    padding-left: 33px;
+}
+
+footer .table td:last-child {text-align: right;}
+footer .table td {
+    padding: 0px;
+    border: 0;
+}
+
+footer .table td i {
+    position: absolute;
+    left: 0px;
+    font-size: 21px;
+    top: 6px;
+}
+
+footer .table td {
+    position: relative;
+    padding: 4px 0;
+}
+.footer-logo td {
+    padding-right: 4px !important;
+}
+
+.footer-logo td:last-child {
+    padding-right: 0px !important;
+}
+footer hr {
+    border-color: #9294a0;
+}
+
+.footer-bottom p {
+    text-align: right;
+}
+.footer-bottom {
+    margin-top: 30px;
+}
+.open-hours hr {
+    margin: 30px 0;
 }
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 878px) {
-    .bg-intro{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: center;
-        p{
-            font-size: 25px;
-            text-align: center;
-        }
-        h1{
-            font-size: 75px;
-            text-align: center;
-        }
-    }
-    .flex-text-intro{
-        margin-top: 20rem;
-    }
-    .nav-grid-btn{
-        display: flex;
-        justify-content: start;
-        flex-direction: row;
-        gap: 30px;
-    }
-    .nav-center-btn{
-        display: flex;
-        gap: 10px;
-        a{
-            padding-bottom: 10px;
-        }
-    } 
+  .bg-intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .bg-intro p {
+    text-align: center;
+  }
+  .bg-intro h1 {
+    text-align: center;
+  }
+  .flex-text-intro {
+    margin-top: 20rem;
+  }
+  .nav-grid-btn {
+    display: grid;
+    place-items: center;
+  }
+  .nav-center-btn {
+    display: flex;
+    gap: 10px;
+  }
+  .nav-center-btn a {
+    padding-bottom: 10px;
+  }
 }
-@media screen and (max-width: 1510px) {
-    .info-grid{
-        margin-left: -20rem;
+@media screen and (max-width: 1024px) {
+    .title-intro{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .intro-style{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
 }
 @media screen and (max-width: 500px) {
-    .info-grid{
-        display: flex;
-        justify-content: start;
-        align-content: start;
-        margin-left: 0;
-        h3{
-            text-align: center;
-            margin-left: 10rem;
-        }
-        form{
-            margin-left: 10rem;
-        }
-        i{
-            margin-left: 10rem;
-        }
-    }
+  .info-grid {
+    display: flex;
+    justify-content: start;
+    align-content: start;
+    margin-left: 0;
+  }
+  .info-grid h3 {
+    text-align: center;
+    margin-left: 10rem;
+  }
+  .info-grid form {
+    margin-left: 10rem;
+  }
+  .info-grid i {
+    margin-left: 10rem;
+  }
 }
-@media screen and (min-width: 320px) and (max-width: 878px){
-    .flex-text-intro{
-        justify-content: center;
-    }
+@media screen and (min-width: 320px) and (max-width: 878px) {
+  .flex-text-intro {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 500px){
+  footer{
+    height: 2800px;
+  }
 }
 @media screen and (max-width: 320px){
-    .nav-grid-btn{
-        display: flex;
-        flex-direction: column;
-        margin-left: 0rem;
-    }
-    .nav-center-btn{
-        display: flex;
-        gap: 20px;
-        a{
-            padding-bottom: 20px;
-        }
-    }
+  .text-cover{
+    margin-top: 5rem;
+  }
 }
 @media screen and (min-width: 50px) and (max-width: 1024px) {
-    .info-grid{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-    }
-    .bg-intro{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+  .info-grid {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .bg-intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
+
+
+/*# sourceMappingURL=styles.scss.map */
